Bug 958726 - Perform shrinking GC if nsJSContext::GarbageCollectNow is called with aShrinking == ShrinkingGC. r=billm